0.05

0.04 2015-01-09T07:42:44+01:00
 [Log::FreeSWITCH::Line::Data]
 - Fix test dependency for DateTime module.

0.03 2015-01-08T19:59:22+01:00
 [Common]
 - Fix dependencies, which breaks tests (bad Error::Pure::Always).

0.02 2015-01-08T01:30:56+01:00
 [Log::FreeSWITCH::Line::Data]
 - Add missing VERSION.
 - Add tests.
 - Fix time without miliseconds.

0.01 2015-01-04T11:16:34+01:00
 - First version.